--- a/第一章/102.md
+++ b/第一章/102.md
@@ -1,1 +1,18 @@
-实现项目部署，发布，回滚等，可参考Jenkins功能。
+伴随公司业务的快速发展，大量的需求提交及系统交付，使得系统内部及系统间的调用，数量爆炸式增长，从产品到开发再到运维，无法对现有系统的所有接口给出记录文档，工作交结后，系统维护或接口调用迭代都存在未知风险，基于系统运行安全性考虑，接口管理愈发显得尤为重要和急迫。
+
+具体可参考下图API业务层架构：
+![API业务层架构](/assets/API业务层架构.png "API业务层架构")
+
+现运行的系统对于产品经理，开发和运维来说，都是黑盒状态运行，系统规划了哪些对外服务，使用情况和健康状态没有数据支撑，系统现使用的第三方平台功能有哪些均无法进行及时汇总和了解。
+
+针对系统运行现状和安全需求，定制规划API管理，意在对业务服务的汇总及健康运行提供保障并使系统相关人员快速了解和测试相对应的API接口及信息，保障系统的正常运行。
+
+API管理 主要完成以下几点功能：
+1. 封装SDK,统一规范，对接口进行汇总监控
+2. 提供在线测试功能，无论产品经理还是工程师，均可快速测试，定位问题
+3. 提供在线接口文档生成，保障系统提供对外服务清晰条理
+4. 统一封装第三方平台信息，在使用第三方平台的同时，无需重复开发
+
+
+具体可参考下图API管理功能图：
+![API管理功能图](/assets/API管理功能图.png "API管理功能图")
