--- a/第一章/103.md
+++ b/第一章/103.md
@@ -1,1 +1,6 @@
-实现程序的自动化测试功能
+资源平台主要集服务器资源及平台建设的底层系统进行汇总，以项目管理为中心，辐射扩展支撑系统，构建起公司底层基础服务，从系统测试到部署，再到运行监控的整体解决方案，使系统运行更加健壮透明，从测试人员到产品人员再到开发运维人员，均可快速了解系统运行情况，资源使用率等。
+
+具体可参考下图资源平台流程图：
+
+![资源平台流程图](/assets/资源平台流程图.png "资源平台流程图")
+
