--- a/第一章/101.md
+++ b/第一章/101.md
@@ -1,1 +1,12 @@
-VMWARE客户端手动分配服务器资源，如：CPU，MEM，DISK等，目标是实现平台自动分配资源。
+通行证系统（http://reg.eol.cn）在业务发展中，不足以满足现有系统的需求，特对此进行升级拓展，具体可参考下图：
+
+![通行证系统功能流程图](/assets/通行证系统功能流程图.png "通行证系统功能流程图")
+图 通行证系统功能流程图
+
+现运行的通行证系统（https://passport.eol.cn）主要进行了以下调整，完成对外部用户的统一管理及统一登录，功能列表如下：
+1. 实现通行证系统的统一登录
+2. 第三方账号（微信公众号，微信开放平台，微博，QQ）的集成登录，避免业务再去付费申请第三方账号，审核周期带来的时间浪费。
+3. EOL通行证与第三方账号绑定（按实际业务选择）
+4. 对原通行证系统(http://reg.eol.cn)的僵尸账号清理
+5. 集成微信浏览器分享功能，对QQ，微博分享给出解决方案
+6. 提供业务系统集成接口及文档（[链接地址](http://wiki.dev.eol.com.cn/index.php/%E7%BB%9F%E4%B8%80%E7%99%BB%E5%BD%95%E7%B3%BB%E7%BB%9Fv1.0)）
