--- a/第一章/101.md
+++ b/第一章/101.md
@@ -1,12 +1,19 @@
-通行证系统（http://reg.eol.cn）在业务发展中，不足以满足现有系统的需求，特对此进行升级拓展，具体可参考下图：
+通行证系统（[http://reg.eol.cn）在业务发展中，不足以满足现有系统的需求，特对此进行升级拓展，具体可参考下图：](http://reg.eol.cn）在业务发展中，不足以满足现有系统的需求，特对此进行升级拓展，具体可参考下图：)
 
-![通行证系统功能流程图](/assets/通行证系统功能流程图.png "通行证系统功能流程图")
+![通行证系统功能流程图](/assets/通行证系统功能流程图.png "通行证系统功能流程图")  
 图 通行证系统功能流程图
 
-现运行的通行证系统（https://passport.eol.cn）主要进行了以下调整，完成对外部用户的统一管理及统一登录，功能列表如下：
-1. 实现通行证系统的统一登录
+现运行的通行证系统（[https://passport.eol.cn）主要进行了以下调整，完成对外部用户的统一管理及统一登录，功能列表如下：](https://passport.eol.cn）主要进行了以下调整，完成对外部用户的统一管理及统一登录，功能列表如下：)  
+1. 实现通行证系统的统一登录  
 2. 第三方账号（微信公众号，微信开放平台，微博，QQ）的集成登录，避免业务再去付费申请第三方账号，审核周期带来的时间浪费。
-3. EOL通行证与第三方账号绑定（按实际业务选择）
-4. 对原通行证系统(http://reg.eol.cn)的僵尸账号清理
-5. 集成微信浏览器分享功能，对QQ，微博分享给出解决方案
-6. 提供业务系统集成接口及文档（[链接地址](http://wiki.dev.eol.com.cn/index.php/%E7%BB%9F%E4%B8%80%E7%99%BB%E5%BD%95%E7%B3%BB%E7%BB%9Fv1.0)）
+
+1. EOL通行证与第三方账号绑定（按实际业务选择）
+
+2. 对原通行证系统\([http://reg.eol.cn\)的僵尸账号清理](http://reg.eol.cn%29的僵尸账号清理)
+
+3. 集成微信浏览器分享功能，对QQ，微博分享给出解决方案
+4. 提供业务系统集成接口及文档（
+   [链接地址](http://wiki.dev.eol.com.cn/index.php/统一登录系统v1.0)）
+
+
+
